--- a/package.json
+++ b/package.json
@@ -46,5 +46,10 @@
         "ts-node": "^8.3.0",
         "typescript": "^3.5.1"
     },
-    "dependencies": {}
+    "dependencies": {
+        "fastify-plugin": "^1.6.1"
+    },
+    "peerDependencies": {
+        "fastify": "^2.13.0"
+    }
 }
