--- a/package.json
+++ b/package.json
@@ -35,19 +35,25 @@
         "@babel/register": "^7.0.0",
         "@types/bn.js": "^4.11.5",
         "@types/chai": "^4.1.7",
+        "@types/es6-promisify": "^6.0.0",
+        "@types/eventsource": "^1.1.2",
         "@types/mocha": "^5.2.5",
-        "@types/node": "^12.0.10",
         "@typescript-eslint/eslint-plugin": "^1.3.0",
         "@typescript-eslint/parser": "^1.3.0",
         "chai": "^4.2.0",
+        "es6-promisify": "^6.1.0",
         "eslint": "5.16.0",
         "eslint-plugin-import": "^2.18.2",
+        "eventsource": "^1.0.7",
+        "fastify": "^2.13.0",
+        "it-pushable": "^1.4.0",
         "mocha": "^6.1.4",
         "ts-node": "^8.3.0",
         "typescript": "^3.5.1"
     },
     "dependencies": {
-        "fastify-plugin": "^1.6.1"
+        "fastify-plugin": "^1.6.1",
+        "it-to-stream": "^0.1.1"
     },
     "peerDependencies": {
         "fastify": "^2.13.0"
