--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@types/es6-promisify": "^6.0.0",
         "@types/eventsource": "^1.1.2",
         "@types/mocha": "^5.2.5",
+        "@types/sinon": "^9.0.0",
         "@typescript-eslint/eslint-plugin": "^1.3.0",
         "@typescript-eslint/parser": "^1.3.0",
         "chai": "^4.2.0",
@@ -46,6 +47,7 @@
         "fastify": "^2.13.0",
         "it-pushable": "^1.4.0",
         "mocha": "^6.1.4",
+        "sinon": "^9.0.2",
         "ts-node": "^8.3.0",
         "typescript": "^3.5.1"
     },
