--- a/tsconfig.json
+++ b/tsconfig.json
@@ -58,6 +58,7 @@
       // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
       // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
     },
+  "include": ["src"],
   "exclude": [
     "node_modules"
   ]
