--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
         "typescript": "^3.5.1"
     },
     "dependencies": {
+        "abort-controller": "^3.0.0",
+        "event-iterator": "^1.2.0",
         "fastify-plugin": "^1.6.1",
         "it-to-stream": "^0.1.1"
     },
