--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -24,5 +24,6 @@ jobs:
           tag_message: "v%s"
           commit_pattern: "^Release (\\S+)"
         env: # More info about the environment variables in the README
+          DEFAULT_BRANCH: 1.x
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this as is, it's automatically generated
           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }} # You need to set this in your repo settings
