--- a/package.json
+++ b/package.json
@@ -46,17 +46,17 @@
         "eslint-plugin-import": "^2.18.2",
         "eventsource": "^1.0.7",
         "fastify": "3.18.1",
-        "it-pushable": "^1.4.0",
         "mocha": "^8.3.2",
         "sinon": "^9.0.2",
         "ts-node": "^8.3.0",
         "typescript": "^3.5.1"
     },
     "dependencies": {
-        "fastify-plugin": "2.0.1",
-        "it-to-stream": "^0.1.1"
+        "fastify-plugin": "2.3.4",
+        "it-to-stream": "^1.0.0",
+        "it-pushable": "^1.4.2"
     },
     "peerDependencies": {
-        "fastify": "3.x"
+        "fastify": ">=3"
     }
 }
