--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -12,7 +12,7 @@ jobs:
     name: Validate PR title
     runs-on: ubuntu-latest
     steps:
-      - uses: amannn/action-semantic-pull-request@v4
+      - uses: amannn/action-semantic-pull-request@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -20,5 +20,4 @@ jobs:
             fix
             feat
             chore
-          validateSingleCommit: true #single commit can ovveride squash merge commit message
-          validateSingleCommitMatchesPrTitle: false
+            docs
